--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: 'Roboto', sans-serif;
   margin: 0 0;
 }
@@ -30,7 +30,7 @@ body{
 .lineBreak {
   position: absolute;
   top: 45px;
-  left: 20px;
+  left: 15px;
   width: 160px;
   border: 0.5px solid black;
 }
@@ -60,10 +60,10 @@ body{
 
 .fa-check {
   position: absolute;
-  top: 151px;
-  left: 107px;
+  top: 70%;
+  left: 30%;
   background-size: cover;
-  height:30px;
+  height: 30px;
   width: 30px;
   cursor: pointer;
 }
@@ -73,7 +73,7 @@ body{
 }
 
 .fa-check:active {
-  transform: scale(0.80);
+  transform: scale(0.8);
 }
 
 .fa-check:focus {
@@ -82,10 +82,10 @@ body{
 
 .fa-times {
   position: absolute;
-  top: 151px;
-  left: 146px;
+  top: 70%;
+  left: 55%;
   background-size: cover;
-  height:30px;
+  height: 30px;
   width: 30px;
   cursor: pointer;
 }
@@ -95,7 +95,7 @@ body{
 }
 
 .fa-times:active {
-  transform: scale(0.80);
+  transform: scale(0.8);
 }
 
 .fa-times:focus {
@@ -145,4 +145,28 @@ body{
   /* transition: all 0.5s ease-in-out; */
   visibility: visible;
   /* opacity: 1; */
+}
+
+.made {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  color: #666;
+  font-size: 12px;
+  display: block;
+  position: absolute;
+  width: 90%;
+  bottom: 2px;
+  margin: auto 2px auto 6px;
+  /* transform: translateX(-50%) translateY(-50%); */
+}
+
+.made a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.made .fa-heart {
+  color: #e90606;
+  margin: 0 3px;
+  font-size: 12px;
 }
